space align fix

--- a/sty.css
+++ b/sty.css
@@ -226,7 +226,7 @@ section .why-join-us{
   #my-col3 {
     /* background-color: blue; */
     color:black;
-    padding-left: 110px;
+    padding-left: 0px;
     padding-right: 10px;
       }
       h4{
@@ -234,23 +234,23 @@ section .why-join-us{
       }
 #my-col1{
     padding-left: 10px;
-    padding-right:30px;
+    padding-right:20px;
     /* padding-right: 10px; */
   }
   #my-col2{
-    padding-left: 30px;
-    padding-right: 10px;
+    padding-left: 10px;
+    padding-right: 5px;
   }
   /* p {
     background-color: green;
   } */
   .rect-img{
       padding-top:25px;
-      padding-left:75px;
+      padding-left:85px;
       padding-bottom:25px;
   }
   .rect-img .img-space{
-      padding-left:14px;
+      padding-right:24px;
   }
   .footer-img{
     position:relative;
